chore: add mc_version

--- a/internal/lang/files/zh-TW.conf
+++ b/internal/lang/files/zh-TW.conf
@@ -170,7 +170,8 @@
 	這張地圖使用 <a href="https://bluecolo.red/bluemap">BlueMap</a> {version} 充滿愛心 &#9829 地製作而成
 </p>
 <p class="info-footer">
-	由 <a href="https://github.com/EfinaServer/bluemap-action">bluemap-action</a> {toolVersion} 為 {projectName} 部署 &bull; 繪製於 {renderTime}
+  繪製於 {renderTime} &bull; {minecraftVersion}
+	由 <a href="https://github.com/EfinaServer/bluemap-action">bluemap-action</a> {toolVersion} 部署 
 </p>
 """
   }
