Configure Netlify deployment in workflow

--- a/.github/workflows/test-reusable-workflow.yml
+++ b/.github/workflows/test-reusable-workflow.yml
@@ -18,7 +18,9 @@ jobs:
     uses: ./.github/workflows/build-map.yml
     with:
       server-directory: test/test-onlinemap
-      deploy-to-netlify: false
+      netlify-site-id: 0e027990-adef-4b7f-99e1-957d387a9128
+      deploy-to-netlify: true
     secrets:
       PTERODACTYL_PANEL_URL: ${{ secrets.PTERODACTYL_PANEL_URL }}
       PTERODACTYL_API_KEY: ${{ secrets.PTERODACTYL_API_KEY }}
+      NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
