--- a/.github/workflows/build-map.yml
+++ b/.github/workflows/build-map.yml
@@ -85,11 +85,13 @@ jobs:
 
       - name: Deploy to Netlify
         if: inputs.deploy-to-netlify
+        working-directory: ${{ inputs.server-directory }}/web
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ inputs.netlify-site-id }}
         run: >-
           npx netlify-cli deploy
           --prod
-          --dir '${{ inputs.server-directory }}/web'
+          --no-build
+          --dir '.'
           --message "Deploy from GitHub Actions at $(TZ='Asia/Taipei' date +'%Y-%m-%d %H:%M:%S %Z')"
